--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 </head>
 <body>
 
-<script src="practice_operators.js"></script>
-<script src="practice_cycles.js"></script>
-<script src="practice_arrays.js"></script>
-<script src="practice_functions_basics.js"></script>
+<script src="practice_array_methods.js"></script>
+<script src="practice_numbers_string.js"></script>
+<script src="practice_objects.js"></script>
 </body>
 </html>
